TFP-6387: Utvider VurderFagsystem hvor sak opprettes automatisk hvis opprettSakVedBehov er satt og destinasjon er vedtaksløsningen for strukturerte søknader